Fix bug with label groups not getting focus on child elements. Set z-index for now. Come up with better strategy later

--- a/static/css/Canvas.css
+++ b/static/css/Canvas.css
@@ -276,6 +276,10 @@ body {
 	cursor: pointer;
 }
 
+.design-canvas .widget-control-leaf {
+	z-index: 1000; 
+}
+
 .design-canvas.design-canvas-hovered {
 	outline: 1px dashed black;
 }
